# dark-cv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/dark_cv/: comparator.py  denoiser.py  enhancer.py  main.py
